canvas now link to blog posts

--- a/_posts/2019-03-12-edge.md
+++ b/_posts/2019-03-12-edge.md
@@ -1,6 +1,7 @@
 ---
 title: Light discontinuities
 categories: [02]
+file: edge.frag
 ---
 An edge is a large spatial change in light intensity or spectrum.
 Edges are the defining feature of most visual displays.
