--- a/_posts/2019-03-10-ganzfeld.md
+++ b/_posts/2019-03-10-ganzfeld.md
@@ -1,6 +1,7 @@
 ---
 title: An area of uniform light
 categories: [00]
+file: ganzfeld.frag
 ---
 The simplest display is an area of uniform light.
 If the area spans the whole visual field, it is called a Ganzfeld.
