--- a/_posts/2019-03-11-gradient.md
+++ b/_posts/2019-03-11-gradient.md
@@ -1,5 +1,6 @@
 ---
 title: Smooth spatial changes
 categories: [01]
+file: gradient.frag
 ---
 A gradient of light changes its spectrum or intensity smoothly over space. 
