Roll out posts on starting site

--- a/_posts/2019-03-10-ganzfeld.md
+++ b/_posts/2019-03-10-ganzfeld.md
@@ -1,6 +1,6 @@
 ---
 title: An area of uniform light
-categories: [00]
+categories: ['00']
 file: ganzfeld.frag
 ---
 The simplest display is an area of uniform light.
@@ -9,3 +9,7 @@ If the area spans the whole visual field, it is called a Ganzfeld.
 The perceived colour of a Ganzfeld changes to light gray over time.
 There is no direct relationship between the spectrum and intensity of light and its perceived colour.
 It always depends upon the context it is embedded in.
+
+{% assign shader=site.shader | where:"file", site.file  | first %}
+
+{{ shader.content }}
