--- a/_posts/2019-03-12-edge.md
+++ b/_posts/2019-03-12-edge.md
@@ -1,6 +1,6 @@
 ---
 title: Light discontinuities
-categories: [02]
+categories: ['02']
 file: edge.frag
 ---
 An edge is a large spatial change in light intensity or spectrum.
