added source code to posts

--- a/_posts/2019-03-11-gradient.md
+++ b/_posts/2019-03-11-gradient.md
@@ -4,3 +4,6 @@ categories: ['01']
 file: gradient.frag
 ---
 A gradient of light changes its spectrum or intensity smoothly over space. 
+
+{% assign shader=site.shader | where:"file", page.file  | first %}
+{{ shader.content }}
