--- a/_posts/2019-03-10-ganzfeld.md
+++ b/_posts/2019-03-10-ganzfeld.md
@@ -10,6 +10,5 @@ The perceived colour of a Ganzfeld changes to light gray over time.
 There is no direct relationship between the spectrum and intensity of light and its perceived colour.
 It always depends upon the context it is embedded in.
 
-{% assign shader=site.shader | where:"file", site.file  | first %}
-
+{% assign shader=site.shader | where:"file", page.file  | first %}
 {{ shader.content }}
