added canvas to posts

--- a/_posts/2019-03-12-edge.md
+++ b/_posts/2019-03-12-edge.md
@@ -6,5 +6,7 @@ file: edge.frag
 An edge is a large spatial change in light intensity or spectrum.
 Edges are the defining feature of most visual displays.
 
+{% include bg_canvas.html file=page.file %}
+
 {% assign shader=site.shader | where:"file", page.file  | first %}
 {{ shader.content }}
