--- a/_posts/2019-03-11-gradient.md
+++ b/_posts/2019-03-11-gradient.md
@@ -5,5 +5,7 @@ file: gradient.frag
 ---
 A gradient of light changes its spectrum or intensity smoothly over space. 
 
+{% include bg_canvas.html file=page.file %}
+
 {% assign shader=site.shader | where:"file", page.file  | first %}
 {{ shader.content }}
