Update and rename 2019-03-10-ganzfeld.md to 2019-03-10-uniform.md

--- a/_posts/2019-03-10-uniform.md
+++ b/_posts/2019-03-10-uniform.md
@@ -1,8 +1,10 @@
 ---
 title: An area of uniform light
 categories: ['00']
-file: ganzfeld.frag
+file: uniform.frag
 ---
+{% include canvas.html file=page.file %}
+
 The simplest display is an area of uniform light.
 If the area spans the whole visual field, it is called a Ganzfeld.
 
@@ -10,4 +12,4 @@ The perceived colour of a Ganzfeld changes to light gray over time.
 There is no direct relationship between the spectrum and intensity of light and its perceived colour.
 It always depends upon the context it is embedded in.
 
-{% include bg_canvas.html file=page.file %}
+{% include bg_canvas.html file='ganzfeld.frag' %}
